# PrepareForWorkNotes

./: README.md
2025寒假/H/: C++ 面经合集.md  Leetcode——数学篇集合.md  YH 2025 寒假学习计划.md  寒假部分题代码.md
2025寒假/Y/: YH 2025 寒假学习计划.md  Y_YH 2025 寒假学习计划.md  学习记录等.md
AI/CV&CG/: 3D Gaussian Splatting 相关学习.md  NeRF系列 原理及重点记录.md
AI/Papertimeline/: 科研任务 Timeline.md
AI/查找内容/: PhotoToCartoon.md
AI/深度学习基础/: Pytorch Lighting 的基本使用.md  Pytorch-Lightning.md  深度学习相关基础.md
AI/论文阅读和基础知识/: HuggingFace Diffusers 笔记.md  Text-Guided 3D Face Synthesis - From Generation to Editing.md  人脸细节论文相关.md  如何使用AutoDL跑代码？.md  综述：Advances in text‐guided 3D editing a survey 论文.md
Algos/: 10_cast.cpp  11_virtualDestructor.cpp  可刷题目链接.txt
Algos/Algorithms/: Kama094_BellmanFord.cpp  Kama094_SPFA.cpp  Kama_053_Prim.cpp  Kama_095.cpp  Kama_096_01.cpp  Kama_096_02.cpp  Kama_097_Floyd.cpp  Kama_098_01.cpp  Kama_099_02.cpp  Kama_100.cpp  Kama_101.cpp  Kama_105.cpp  (+6 more)
Algos/Cpp_GI/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
八股文/: 最近学习计划——50天.md  秋招冲刺面经.md  计算机图形学面经汇总.md  记录新增整理题目的日期.md  面经合集——只有题目版.md  面经合集——题目+答案版.md
数学/: 数学学习篇——索引目录.md
数据结构与算法/: 代码随想录——图论部分.md  代码随想录——算法题目.md
游戏引擎/: Games104 题目合集.md  Piccolo 小引擎引擎阅读.md  《游戏引擎架构》阅读笔记.md
计算机图形学/: Filament 阅读及相关算法学习.md  OpenGL 白皮书阅读.md  计算机图形学相关问题.md
记录/: 2025_04_20力扣刷题.md  2025_05杂题.md  2025年6月力扣刷题.md  H 每天做的事情.md  bagu.csv.txt  记录位置 地址 各个面试题目 面经 应该复习的东西在哪.md
项目相关/: Github 进阶操作.md
(+324 files in other folders)
